templates/akhq_template.yaml
---
# Source: akhq/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-akhq
  labels:
    app.kubernetes.io/name: akhq
    helm.sh/chart: akhq-0.24.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: akhq
      app.kubernetes.io/instance: release-name
  ingress:
  - ports:
    - port: http
    - port: management
---
# Source: akhq/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-akhq
  labels:
    app.kubernetes.io/name: akhq
    helm.sh/chart: akhq-0.24.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
    - port: 28081
      targetPort: management
      protocol: TCP
      name: management
  selector:
    app.kubernetes.io/name: akhq
    app.kubernetes.io/instance: release-name
---
# Source: akhq/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-akhq
  labels:
    app.kubernetes.io/name: akhq
    helm.sh/chart: akhq-0.24.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: akhq
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/config: 699bd99e0e7422cf2b76502f1030d3564615f311a446d8a5fbb917cde1c2d4fb
      labels:
        app.kubernetes.io/name: akhq
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      containers:
        - name: akhq
          image: "tchiotludo/akhq:0.24.0"
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /app/application.yml
              subPath: application.yml
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: management
              containerPort: 28081
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: management
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: management
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            {}
      volumes:
      - name: config
        configMap:
          name: release-name-akhq
